--- a/Calculadora/index.html
+++ b/Calculadora/index.html
@@ -12,7 +12,7 @@
         <h1>Calculadora</h1>
         <input type="number" id="numero1" placeholder="Digite o primeiro número: ">
         <input type="number" id="numero2" placeholder="Digite o segundo número: ">
-        <p id="resultado"> </p>
+        <h2 id="resultado"> </h2>
         <button onclick="calcularSoma()" id="calcularButton" name="calcularButton">Soma</button>
         <button onclick="calcularSub()" id="subButton" name="subButton">Subtração</button>
         <button onclick="calcularMulti()" id="multiButton" name="multiButton">Multiplicação</button>
