--- a/CursoJS/aula04/ex001.html
+++ b/CursoJS/aula04/ex001.html
@@ -17,9 +17,9 @@
     <h1>Olá, Mundo!</h1>
     <p>Livre de maldições!</p>
     <script>
-        window.alert('Minha primeira mensagem')
-        window.confirm('Está gostando do JS?')
-        window.prompt('Qual é seu nome?')
+        window.alert('Minha primeira mensagem') // Mostra uma mensagem de alerta
+        window.confirm('Está gostando do JS?') // Dispõe as opções OK e Cancelar
+        window.prompt('Qual é seu nome?') // Mostra uma caixa de texto
     </script>
 </body>
 </html>
