--- a/CursoJS/aula11/gringo.html
+++ b/CursoJS/aula11/gringo.html
@@ -25,7 +25,7 @@
     <div id="res"></div>
     <script>
         function checa(){
-            var seupais = document.querySelector('input#país')
+            var seupais = document.getElementById.value('país')
             var vazio = ''
             if (seupais = 'Brasil') {
                 res.innerHTML = 'brazuca!'
