--- a/CursoJS/Exercícios/ex014/modelo/modelo.html
+++ b/CursoJS/Exercícios/ex014/modelo/modelo.html
@@ -6,16 +6,16 @@
     <title>Modelo de exercício</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
-<body>
+<body onload="carregar()">
     <header>
         <h1>Hora do dia</h1>
     </header>
     <section>
-            <div>
-                <p>Testando...</p>
+            <div id="msg">
+                <p>Aqui vai aparecer a mensagem...</p>
             </div>
-            <div>
-                <p>Olá, Matheus!</p>
+            <div id="foto">
+                <img id="imagem" src="fotomanha.jpg" alt="Foto do dia">
             </div>
     </section>
     <footer>
