--- a/CursoJS/aula11/gringo.html
+++ b/CursoJS/aula11/gringo.html
@@ -4,34 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GRINGO</title>
-    <style>
-        body {
-            height: 90vh;
-            color: white;
-            background-color: darkslategray;   
-            font-family: Arial, Helvetica, sans-serif;
-            font-size: medium;
-            text-align: center;
-            align-content: center;
-        }
-    </style>
+    <link rel="stylesheet" href="estilo.css">
+    <script src="gringo.js"></script>
 </head>
 <body>
     <h1>GRINGO ou Brazuca?</h1>
     <h2>Qual seu país?</h2>
     <input type="text" name="país" id="país">
-    <input type="button" value="Coé?!" onclick="checa()">
-    <div>Você é...</div>
+    <input type="button" value="Coé?!" onclick="coe()">
+    <div id="msg">Você é...</div>
     <div id="res"></div>
-    <script>
-        function checa(){
-            var seupais = document.getElementById('país')
-            if (seupais = 'Brasil') {
-                res.innerHTML = 'brazuca!'
-            } else {
-                res.innerHTML = 'gringo.'
-            }
-        }
-    </script>
 </body>
 </html>
