--- a/CursoJS/Exercícios/ex016/modelo.html
+++ b/CursoJS/Exercícios/ex016/modelo.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modelo de exercício</title>
+    <title>Contagem</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
     <header>
-        <h1>Título</h1>
+        <h1>Contagem</h1>
     </header>
     <section>
             <div id="entradas">
