--- a/CursoJS/Exercícios/ex018/modelo.html
+++ b/CursoJS/Exercícios/ex018/modelo.html
@@ -13,7 +13,7 @@
     <section>
             <div id="entradas">
                 <label for="numero">Número:</label>
-                <input type="number" name="numero" id="numero">
+                <input type="number" name="numero" id="numero" placeholder="Digite um número de 1 a 100.">
                 <button id="add" onclick="adicionar()">Adicionar</button>
             </div>
             <div id="saidas">
@@ -21,6 +21,7 @@
                 <textarea readonly name="atualizado" id="atualizado" placeholder="Digite um número acima."></textarea>
                  <!-- textarea com readonly pra não dar pra apagar -->
                  <textarea readonly name="resultado" id="resultado" placeholder="O resultado aparecerá aqui."></textarea>
+                 <br>
                   <button id="fim" onclick="finalizar()">Finalizar</button>
             </div>
     </section>
